; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_i386_vm_init.c_pmap_next_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_i386_vm_init.c_pmap_next_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@avail_remaining = common dso_local global i64 0, align 8
@pmap_memory_region_current = common dso_local global i64 0, align 8
@pmap_memory_region_count = common dso_local global i64 0, align 8
@pmap_memory_regions = common dso_local global %struct.TYPE_2__* null, align 8
@max_ppnum = common dso_local global i64 0, align 8
@lowest_lo = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pmap_next_page(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  %4 = load i64, i64* @avail_remaining, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %57

6:                                                ; preds = %1
  br label %7

7:                                                ; preds = %23, %6
  %8 = load i64, i64* @pmap_memory_region_current, align 8
  %9 = load i64, i64* @pmap_memory_region_count, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %56

11:                                               ; preds = %7
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pmap_memory_regions, align 8
  %13 = load i64, i64* @pmap_memory_region_current, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pmap_memory_regions, align 8
  %18 = load i64, i64* @pmap_memory_region_current, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp sgt i64 %16, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %11
  %24 = load i64, i64* @pmap_memory_region_current, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* @pmap_memory_region_current, align 8
  br label %7

26:                                               ; preds = %11
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pmap_memory_regions, align 8
  %28 = load i64, i64* @pmap_memory_region_current, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = add nsw i64 %31, 1
  store i64 %32, i64* %30, align 8
  %33 = load i64*, i64** %3, align 8
  store i64 %31, i64* %33, align 8
  %34 = load i64, i64* @avail_remaining, align 8
  %35 = add nsw i64 %34, -1
  store i64 %35, i64* @avail_remaining, align 8
  %36 = load i64*, i64** %3, align 8
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @max_ppnum, align 8
  %39 = icmp sgt i64 %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %26
  %41 = load i64*, i64** %3, align 8
  %42 = load i64, i64* %41, align 8
  store i64 %42, i64* @max_ppnum, align 8
  br label %43

43:                                               ; preds = %40, %26
  %44 = load i64, i64* @lowest_lo, align 8
  %45 = icmp eq i64 %44, 0
  br i1 %45, label %51, label %46

46:                                               ; preds = %43
  %47 = load i64*, i64** %3, align 8
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* @lowest_lo, align 8
  %50 = icmp slt i64 %48, %49
  br i1 %50, label %51, label %54

51:                                               ; preds = %46, %43
  %52 = load i64*, i64** %3, align 8
  %53 = load i64, i64* %52, align 8
  store i64 %53, i64* @lowest_lo, align 8
  br label %54

54:                                               ; preds = %51, %46
  %55 = load i32, i32* @TRUE, align 4
  store i32 %55, i32* %2, align 4
  br label %59

56:                                               ; preds = %7
  br label %57

57:                                               ; preds = %56, %1
  %58 = load i32, i32* @FALSE, align 4
  store i32 %58, i32* %2, align 4
  br label %59

59:                                               ; preds = %57, %54
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
